--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,20 @@
+<!--src/pages/index.astro-->
 ---
 
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <meta name="generator" content={Astro.generator} />
+        <title>Astro</title>
+		<link href="/images/siteLogo.png" rel="icon" />
+        <link href="/fonts/setup.css" rel="stylesheet">
+        <link href="/styles/base.css" rel="stylesheet">
+		<script is:inline src="/scripts/jquery.js"></script>
+    </head>
+    <body>
+        <p>ស្វាគមន៍​មក​កាន់​ទំព័រ​ដើម!</p>
+    </body>
 </html>
