--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,8 @@
 <!--src/pages/index.astro-->
 ---
-
+import Base from "../layouts/Base.astro"
 ---
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <title>Astro</title>
-		<link href="/images/siteLogo.png" rel="icon" />
-        <link href="/fonts/setup.css" rel="stylesheet">
-        <link href="/styles/base.css" rel="stylesheet">
-		<script is:inline src="/scripts/jquery.js"></script>
-    </head>
-    <body>
-        <p>ស្វាគមន៍​មក​កាន់​ទំព័រ​ដើម!</p>
-    </body>
-</html>
+<Base pageTitle="ទំព័រ​ដើម">
+	
+</Base>
