--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,6 +1,14 @@
 <!--src/pages/index.astro-->
 ---
-const {pageTitle="គំរូទំព័រ"} = Astro.props
+let home = ''
+let Khmer = ''
+let Thai = ''
+let Chinese = ''
+let Korean = ''
+const {pageTitle="គំរូទំព័រ", pageURL} = Astro.props
+if(pageURL === '/'){
+    home = 'active'
+}
 ---
 
 <html lang="en">
@@ -45,11 +53,11 @@ const {pageTitle="គំរូទំព័រ"} = Astro.props
                 <link rel="stylesheet" href="/styles/menu.css" />
                 <div class="region">
                     <div class="topnav" id="myTopnav">
-                        <a href="/" class="home">ទំព័រ​ដើម</a>
-                        <a href="/category/Khmer" class="home">រឿង​ខ្មែរ</a>
-                        <a href="/category/Thai" class="movie">រឿង​ថៃ</a>
-                        <a href="/category/Chinese" class="movie">រឿង​ចិន</a>
-                        <a href="/category/Korean" class="movie">រឿង​កូរ៉េ</a>
+                        <a href="/" class=`home ${home}`>ទំព័រ​ដើម</a>
+                        <a href="/category/Khmer" class=`Khmer ${Khmer}`>រឿង​ខ្មែរ</a>
+                        <a href="/category/Thai" class=`Thai ${Thai}`>រឿង​ថៃ</a>
+                        <a href="/category/Chinese" class=`Chinese ${Chinese}`>រឿង​ចិន</a>
+                        <a href="/category/Korean" class=`Korean ${Korean}`>រឿង​កូរ៉េ</a>
                         <a href="#contect" class="contact">ទំនាក់ទំនង</a>
                         <a href="#about" class="about">អំពីយើង​ខ្ញុំ</a>
                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
