--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,4 @@
 import Base from "../layouts/Base.astro"
 ---
 
-<Base pageTitle="ទំព័រ​ដើម" pageURL="/">
-	
-</Base>
+<Base pageTitle="ទំព័រ​ដើម" pageURL="/" />
