--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 <!--src/pages/index.astro-->
 ---
 import Base from "../layouts/Base.astro"
+import Latest from "../components/Latest.astro"
 ---
 
-<Base pageTitle="ទំព័រ​ដើម" pageURL="/" />
+<Base pageTitle="ទំព័រ​ដើម" pageURL="/" >
+    <Latest/>
+</Base>
