--- a/src/layouts/Menu.astro
+++ b/src/layouts/Menu.astro
@@ -16,6 +16,7 @@ if(pageURL === '/'){
                 <a href="/category/Thai" class=`Thai`>រឿង​ថៃ</a>
                 <a href="/category/Chinese" class=`Chinese`>រឿង​ចិន</a>
                 <a href="/category/Korean" class=`Korean`>រឿង​កូរ៉េ</a>
+                <a href="/category/Documentary" class=`Korean`>​ឯកសារ</a>
                 <a href="#contect" class="contact">ទំនាក់ទំនង</a>
                 <a href="#about" class="about">អំពីយើង​ខ្ញុំ</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
