--- a/src/components/Latest.astro
+++ b/src/components/Latest.astro
@@ -8,8 +8,16 @@ const posts = Posts.slice(0, 5)
 <section class="Latest region">
     <div class="panel">
         {posts.map((post)=>(
-            <a href=`/post/${post.slug}`><img src={post.data.thumb} /></a>
+            <a href=`/post/${post.slug}`>
+                <img src={post.data.thumb} />
+                <img class="play-icon" src="/images/play.png" />
+                <div class="title">{post.data.title}</div>
+            </a>
         ))}
+    </div>
+    <div class="ad">
+        <img src="/images/ad.jpg" />
+        <img src="/images/ad.jpg" />
     </div>
 </section>
 
@@ -26,7 +34,6 @@ const posts = Posts.slice(0, 5)
 }
 .Latest .panel a:nth-child(1){
     grid-column: 1 / span 3;
-    
 }
 .Latest .panel a:nth-child(2){
     grid-column: 4 / span 3;
@@ -39,5 +46,69 @@ const posts = Posts.slice(0, 5)
 }
 .Latest .panel a:nth-child(5){
     grid-column: 5 / span 2;
+}
+.Latest .panel a{
+    position: relative;
+    color: white;
+}
+.Latest .panel a .play-icon{
+    position: absolute;
+    width: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 15%;
+}
+.Latest .panel a .title{
+    position: absolute;
+    bottom: 0;
+    font: 22px/1.5 Oswald, Bayon;
+    padding: 5px 10px;
+    text-shadow: 2px 2px 4px #000000;
+    background: -webkit-linear-gradient(bottom, black,transparent);
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.Latest .panel a:nth-child(n+3) .title{
+    font-size: 16px;
+}
+.Latest .ad{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 10px;
+}
+.Latest .ad img{
+    width: 100%;
+}
+@media only screen and (max-width: 600px){
+    .Latest .panel{
+        grid-template-columns: 100%;
+        padding: 10px;
+    }
+    .Latest .panel a:nth-child(1){
+        grid-column: 1 / span 1;
+        
+    }
+    .Latest .panel a:nth-child(2){
+        grid-column: 1 / span 1;
+    }
+    .Latest .panel a:nth-child(3){
+        grid-column: 1 / span 1;
+    }
+    .Latest .panel a:nth-child(4){
+        grid-column: 1 / span 1;
+    }
+    .Latest .panel a:nth-child(5){
+        grid-column: 1 / span 1;
+    }
+    .Latest .ad{
+        grid-template-columns: 100%;
+        padding: 0 10px;
+    }
+    .Latest .panel a .title{
+        font-size: 16px;
+    }
 }
 </style>
