--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -13,6 +13,7 @@
                 <option>រឿង​ថៃ</option>
                 <option>រឿង​ចិន</option>
                 <option>រឿង​កូរ៉េ</option>
+                <option>ឯកសារ</option>
             </select>
             <input type='text' name='q' placeholder='សរសេរ​ពាក្យ​ត្រូវ​ស្វែងរក...' required />
             <input type='submit' value='ស្វែងរក' /> 
@@ -56,7 +57,7 @@
 
     .wrapper .search{
         display: grid;
-        grid-template-columns: 15% auto 15%;
+        grid-template-columns: 70px auto 15%;
     }
 
     .wrapper .search input, .wrapper .search select{
