--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,10 @@
 ---
 import Base from "../layouts/Base.astro"
 import Latest from "../components/Latest.astro"
+import Home from "../components/Home.astro"
 ---
 
 <Base pageTitle="ទំព័រ​ដើម" pageURL="/" >
     <Latest/>
+    <Home/>
 </Base>
