--- a/src/components/Latest.astro
+++ b/src/components/Latest.astro
@@ -2,7 +2,7 @@
 ---
 import { getCollection, getEntry } from 'astro:content'
 const Posts = await getCollection('posts')
-Posts.sort((a,b)=>b.data.pudate-a.data.pudate)
+Posts.sort((a, b)=>b.data.pudate-a.data.pudate)
 const posts = Posts.slice(0, 5)
 ---
 <section class="Latest region">
@@ -24,13 +24,22 @@ const posts = Posts.slice(0, 5)
 <style>
 .Latest .panel{
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-columns: repeat(6, auto);
     grid-gap: 10px;
     padding: 10px 0;
 }
+.Latest .panel a{
+    position: relative;
+    color: white;
+    padding-top: 56.25%;
+    overflow: hidden;
+}
 .Latest .panel img{
+    position: absolute;
     width: 100%;
-    float: left;
+    min-height: 100%;
+    top: 0;
+    lef: 0;
 }
 .Latest .panel a:nth-child(1){
     grid-column: 1 / span 3;
@@ -47,15 +56,11 @@ const posts = Posts.slice(0, 5)
 .Latest .panel a:nth-child(5){
     grid-column: 5 / span 2;
 }
-.Latest .panel a{
-    position: relative;
-    color: white;
-}
 .Latest .panel a .play-icon{
-    position: absolute;
     width: auto;
-    top: 50%;
+    min-height: auto;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
     width: 15%;
 }
@@ -87,20 +92,7 @@ const posts = Posts.slice(0, 5)
         grid-template-columns: 100%;
         padding: 10px;
     }
-    .Latest .panel a:nth-child(1){
-        grid-column: 1 / span 1;
-        
-    }
-    .Latest .panel a:nth-child(2){
-        grid-column: 1 / span 1;
-    }
-    .Latest .panel a:nth-child(3){
-        grid-column: 1 / span 1;
-    }
-    .Latest .panel a:nth-child(4){
-        grid-column: 1 / span 1;
-    }
-    .Latest .panel a:nth-child(5){
+    .Latest .panel a:nth-child(n){
         grid-column: 1 / span 1;
     }
     .Latest .ad{
