--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -1,3 +1,4 @@
+<!--src/pages/[page].astro-->
 ---
 import Base from "../layouts/Base.astro"
 import Pagination from "../components/Pagination.astro"
@@ -10,6 +11,6 @@ export async function getStaticPaths({paginate}){
 }
 const { page } = Astro.props
 ---
-<Base pageTitle="ទំព័រ​ដើម" pageURL="/pagination" >
+<Base pageTitle="ទំព័រ​ដើម" pageURL="/" >
     <Pagination page={page}/>
 </Base>
