--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -47,14 +47,7 @@ const videos = await getEntry(post.data.videos)
             }
             setScreen(videos[0],0,false)
         </script>
-        <div class="content"><Content/></div>
-        <script>
-            var idcomments_acct = 'd102b9dffd79ef5cbbefd0c1a346e859';
-            var idcomments_post_id;
-            var idcomments_post_url;
-        </script>
-        <span id="IDCommentsPostTitle" style="display:none"></span>
-        <script type='text/javascript' src='https://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
+        <div class="fb-comments" data-href="https://khmerweb-static-blog.netlify.app/" data-width="100%" data-numposts="5"></div>
     </div>
     <div class="sidebar">
         ផ្សាយ​ពាណិជ្ជកម្ម
