--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -23,7 +23,6 @@ const videos = await getEntry(post.data.videos)
         </div>
         <div class="author">
             <span>អ្នក​​​​​​​​​​រៀបរៀងៈ {author.data.name}</span>
-            <span></span>
         </div>
         <div class="video" data-videos={JSON.stringify(videos?.data.videos)}>
             <div class="screen"></div>
@@ -35,7 +34,7 @@ const videos = await getEntry(post.data.videos)
             let rawVideos = $('.Post .main .video').attr('data-videos')
             const title = $('.Post .main .video .playlist').attr('data-title')
             
-             const videos = JSON.parse(rawVideos)
+            const videos = JSON.parse(rawVideos)
             
             for(let index in videos){
                 let ending = ''
@@ -43,10 +42,9 @@ const videos = await getEntry(post.data.videos)
                     ending = videos[index].status
                 }
                 
-                let result = `<div id="part${index}" class="part" onClick="setScreen(videos[${index}],
-                ${index},true)">videoTitle part ${(++index)} ${ending}</div>`
-                let html = result.replace("videoTitle", title)
-                $('.playlist').append(html)
+                let result = `<div id="part${index}" class="part" onClick="setScreen(videos[${index}], ${index},true)">${title} part ${(++index)} ${ending}</div>`
+                
+                $('.playlist').append(result)
             }
             setScreen(videos[0],0,false)
         </script>
@@ -100,7 +98,6 @@ const videos = await getEntry(post.data.videos)
     border: 1px solid white;
     border-bottom: none;
 }
-
 .Post .main .video .screen div iframe{
     position: absolute;
     top: 0;
@@ -108,35 +105,30 @@ const videos = await getEntry(post.data.videos)
     width: 100%;
     height: 100%;
 }
-
 .Post .main .video .playlist{
     max-height: 405px;
     overflow: auto;
     margin-bottom: 20px;
     border: 1px solid white;
 }
-
 .Post .main .video .playlist .part{
     text-align: left;
     padding: 10px;
-    color: var(--color);
+    color: var(--playlist-color);
     display: block;
     height: auto;
     font-size: 16px;
-    background: var(--body);
+    background: var(--playlist-part);
     border: 1px solid white;
     border-top: none;
 }
-
 .Post .main .video .playlist .part:last-child{
     margin-bottom: 0;
 }
-
 .Post .main .video .playlist .part:hover{
     cursor: pointer;
     opacity: .7;
 }
-
 
 @media only screen and (max-width:600px){
     .Ad{
