--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -63,6 +63,7 @@ const videos = await getEntry(post.data.videos)
     display: grid;
     grid-template-columns: repeat(2, auto);
     grid-gap: 10px;
+    padding-top: 10px;
 }
 .Ad img{
     width: 100%;
