--- a/src/layouts/Menu.astro
+++ b/src/layouts/Menu.astro
@@ -19,7 +19,7 @@ if(pageURL === '/'){
     Chinese = 'active'
 }else if(pageURL === 'Korean'){
     Korean = 'active'
-}else{
+}else if(pageURL === 'Documentary'){
   Documentary = 'active'
 }
 ---
