--- a/src/pages/page/[slug].astro
+++ b/src/pages/page/[slug].astro
@@ -1,4 +1,4 @@
-<!--src/pages/page/[page].astro-->
+<!--src/pages/page/[slug].astro-->
 ---
 import Base from "../../layouts/Base.astro"
 import Page from "../../layouts/Page.astro"
