--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -13,7 +13,7 @@ const posts = Posts.slice(5, 25)
                     <img src={post.data.thumb} />
                     <img class="play-icon" src="/images/play.png" />
                 </a>
-                <div class="date">{post.data.pudate}</div>
+                <div class="date">{post.data.pudate.toLocaleDateString('it-IT')}</div>
                 <a class="title" href=`/post/${post.slug}`>
                     <div >{post.data.title}</div>
                 </a>
