--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -18,10 +18,10 @@
             <input type='text' name='q' placeholder='សរសេរ​ពាក្យ​ត្រូវ​ស្វែងរក...' required />
             <input type='submit' value='ស្វែងរក' /> 
         </form>
-        <div class='date'>
+        <div class='dateNow'>
             <script>
                 const datetime = new Date().toLocaleDateString('it-IT')
-                $('.date').html(datetime)
+                $('.dateNow').html(datetime)
             </script>
         </div>
     </header>
