--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -68,7 +68,7 @@
         padding: 0 5px;
     }
 
-    .wrapper .date{
+    .wrapper .dateNow{
         text-align: right;
         color: white;
         font-size: 20px;
