--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -10,7 +10,7 @@ const { page } = Astro.props
                     <img src={post.data.thumb} />
                     <img class="play-icon" src="/images/play.png" />
                 </a>
-                <div class="date">{post.data.pudate}</div>
+                <div class="date">{post.data.pudate.toLocaleDateString('it-IT')}</div>
                 <a class="title" href=`/post/${post.slug}`>
                     <div >{post.data.title}</div>
                 </a>
